# csv_handler

./: .gitignore  .pylintrc  README.md  generate_csv_base.sh  init.sh  local.env  mypy.ini  mypy.sh  pylinter.sh  pyproject.toml  save_csv_to_database_base.sh  test.sh
csv_handler/: settings.py
csv_handler/csv_generator/: csv_generator.py  utils.py
csv_handler/csv_parser/: csv_parser.py
csv_handler/db_handler/: handler.py
csv_handler/utils/: log.py
scripts/: csv_file_generator.py  save_csv_to_database.py
tests/csv_generator/: csv_generator_test.py  validate_header_types_test.py
tests/csv_parser/: csv_parser_test.py
tests/utils/: log_test.py
