[tool.poetry]
name = "csv-parser"
version = "0.1.0"
description = ""
authors = ["PavloPanchyshak <panchushak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
pandas = "^2.2.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
retry = "^0.9.2"
pytest-mock = "^3.12.0"
pylint = "2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
